# perl-xs-color

./: .compile.sh  .gitignore  Color.xs  Makefile.PL  README.md  p.pl
c++-lib/: .compile.sh  CMakeLists.txt  Color.cpp  Color.hpp
lib/: Color.pm
